Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-10351

UPR: stream_close returns success even after stream_end is received by the consumer

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 3.0
    • 3.0
    • couchbase-bucket
    • Security Level: Public
    • Untriaged
    • Unknown
    • June 30 - July 18

    Description

      If a stream for a vbucket is requested for a range of seqno (x to y) and the consumer receives docs for all the sequence numbers requested as well as stream_end message, if a stream_close is requested, the ep-engine should return stream-not-found rather than success.

      Steps to reproduce:
      1. Load beer sample
      2. Request vbucket 5 stream for seq number 0 to 3 and read all mutations up to stream_end.
      3. Request stream_close for vbucket 5 and you will receive stream_close OK.

      Please find the packet trace attached (memcached port 12000)

      Attachments

        For Gerrit Dashboard: MB-10351
        # Subject Branch Project Status CR V

        Activity

          People

            tommie Tommie McAfee (Inactive)
            sarath Sarath Lakshman
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty