MB-10351: closeStream on Producer side

- closeStream to return ENGINE_ENOENT, if stream
already closed, or already marked as DEAD.

Change-Id: I03a38c3b4b502dcd68885e9f316bf7a8f31db1a1
Reviewed-on: http://review.couchbase.org/34915
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: abhinav dangeti <abhinav@couchbase.com>